--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Ping</mainClass>
+                                    <mainClass>cn.shuzilm.Ping</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
